--- a/template.html
+++ b/template.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./style.css"></script>
 </head>
 <body>
-    <h1>${USERNAME}</h1>
-    <h2>${LOCATION}</h2>
-    <h2>${BIO}</h2>
-    <a href="${LINKEDIN}">${LINKEDIN}</a>
-    <a href="${GITHUB}">${GITHUB}</a>
+    <h1>User Info</h1>
+    <section>
+        <div class="card">
+            <p>Hello! My name is <strong>${USERNAME}</strong>. I currently live in <strong>${LOCATION}</strong></p>
+            <p>${BIO}</p>
+            <h3>If you'd like to see some of my work, my LinkedIn profile is <a href="${LINKEDIN}">${LINKEDIN}</a>, and my GitHub is <a href="${GITHUB}">${GITHUB}</a></h3>
+        </div>
+    </section>
+    
 </body>
 </html>
